--- a/source/Mlos.Notebooks/SmartCacheCppDocker.ipynb
+++ b/source/Mlos.Notebooks/SmartCacheCppDocker.ipynb
@@ -99,9 +99,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Secrets file c:\\Users\\bpkroth\\src\\MLOS\\MLOS.msdata.2\\source\\Mlos.Python\\Secrets\\local_docker_connection_string.json already exists.\n"
+     "output_type": "stream",
+     "text": [
+      "Secrets file c:\\Users\\bpkroth\\src\\MLOS\\MLOS.msdata.2\\source\\Mlos.Python\\Secrets\\local_docker_connection_string.json already exists.\n"
+     ]
     }
    ],
    "source": [
@@ -150,9 +152,58 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "\nStep 1/15 : FROM microsoft/mssql-server-linux:latest\n ---> 314918ddaedf\nStep 2/15 : RUN apt-get -y update &&     apt-get install -y software-properties-common &&     add-apt-repository -y ppa:deadsnakes/ppa &&     apt-get -y update &&     apt-get install -y python3.7 python3-pip &&     apt-get install -y build-essential libssl-dev libffi-dev python3-dev python3.7-dev unixodbc-dev &&     rm -rf /var/lib/apt/lists/*\n ---> Using cache\n ---> c96a7f675e7e\nStep 3/15 : RUN python3.7 -m pip install pip\n ---> Using cache\n ---> feb04a146619\nStep 4/15 : RUN python3.7 -m pip install --upgrade pip\n ---> Using cache\n ---> 199aa4fecd21\nStep 5/15 : RUN mkdir -p /usr/src/Mlos.Python\n ---> Using cache\n ---> 75325321633c\nStep 6/15 : WORKDIR /usr/src/\n ---> Using cache\n ---> c28de51505c5\nStep 7/15 : COPY ./requirements.txt ./Mlos.Python/requirements.txt\n ---> Using cache\n ---> 9e4576c57340\nStep 8/15 : RUN python3.7 -m pip install -r /usr/src/Mlos.Python/requirements.txt\n ---> Using cache\n ---> dd3f294d79e3\nStep 9/15 : COPY . ./Mlos.Python\n ---> Using cache\n ---> 33fb9dad43b5\nStep 10/15 : ENV ACCEPT_EULA=Y\n ---> Using cache\n ---> 4f19a90fbef2\nStep 11/15 : ARG SA_PASSWORD=DEFAULT_SA_PASSWORD\n ---> Using cache\n ---> 154868f57d1a\nStep 12/15 : RUN (/opt/mssql/bin/sqlservr --accept-eula & ) | grep -q \"Service Broker manager has started\" &&     /opt/mssql-tools/bin/sqlcmd -S127.0.0.1 -Usa -P${SA_PASSWORD} -i ./Mlos.Python/MlosOptimizationServices/ModelsDatabase/SQLScripts/Schema.sql\n ---> Using cache\n ---> 48d1a8c19169\nStep 13/15 : EXPOSE 1433\n ---> Using cache\n ---> 63fd96771c97\nStep 14/15 : ENV SA_PASSWORD=$SA_PASSWORD\n ---> Using cache\n ---> 94ec12721485\nStep 15/15 : CMD /opt/mssql/bin/sqlservr &     cd Mlos.Python; python3.7 start_mlos_optimization_runtime.py launch --database-connection-string-file ./Secrets/local_docker_connection_string.json\n ---> Using cache\n ---> 47630835a8d0\nSuccessfully built 47630835a8d0\nSuccessfully tagged mssql-server-linux-with-mlos-python:latest\nSECURITY WARNING: You are building a Docker image from Windows against a non-Windows Docker host. All files and directories added to build context will have '-rwxr-xr-x' permissions. It is recommended to double check and reset permissions for sensitive files and directories.\n"
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Step 1/15 : FROM microsoft/mssql-server-linux:latest\n",
+      " ---> 314918ddaedf\n",
+      "Step 2/15 : RUN apt-get -y update &&     apt-get install -y software-properties-common &&     add-apt-repository -y ppa:deadsnakes/ppa &&     apt-get -y update &&     apt-get install -y python3.7 python3-pip &&     apt-get install -y build-essential libssl-dev libffi-dev python3-dev python3.7-dev unixodbc-dev &&     rm -rf /var/lib/apt/lists/*\n",
+      " ---> Using cache\n",
+      " ---> c96a7f675e7e\n",
+      "Step 3/15 : RUN python3.7 -m pip install pip\n",
+      " ---> Using cache\n",
+      " ---> feb04a146619\n",
+      "Step 4/15 : RUN python3.7 -m pip install --upgrade pip\n",
+      " ---> Using cache\n",
+      " ---> 199aa4fecd21\n",
+      "Step 5/15 : RUN mkdir -p /usr/src/Mlos.Python\n",
+      " ---> Using cache\n",
+      " ---> 75325321633c\n",
+      "Step 6/15 : WORKDIR /usr/src/\n",
+      " ---> Using cache\n",
+      " ---> c28de51505c5\n",
+      "Step 7/15 : COPY ./requirements.txt ./Mlos.Python/requirements.txt\n",
+      " ---> Using cache\n",
+      " ---> 9e4576c57340\n",
+      "Step 8/15 : RUN python3.7 -m pip install -r /usr/src/Mlos.Python/requirements.txt\n",
+      " ---> Using cache\n",
+      " ---> dd3f294d79e3\n",
+      "Step 9/15 : COPY . ./Mlos.Python\n",
+      " ---> Using cache\n",
+      " ---> 33fb9dad43b5\n",
+      "Step 10/15 : ENV ACCEPT_EULA=Y\n",
+      " ---> Using cache\n",
+      " ---> 4f19a90fbef2\n",
+      "Step 11/15 : ARG SA_PASSWORD=DEFAULT_SA_PASSWORD\n",
+      " ---> Using cache\n",
+      " ---> 154868f57d1a\n",
+      "Step 12/15 : RUN (/opt/mssql/bin/sqlservr --accept-eula & ) | grep -q \"Service Broker manager has started\" &&     /opt/mssql-tools/bin/sqlcmd -S127.0.0.1 -Usa -P${SA_PASSWORD} -i ./Mlos.Python/MlosOptimizationServices/ModelsDatabase/SQLScripts/Schema.sql\n",
+      " ---> Using cache\n",
+      " ---> 48d1a8c19169\n",
+      "Step 13/15 : EXPOSE 1433\n",
+      " ---> Using cache\n",
+      " ---> 63fd96771c97\n",
+      "Step 14/15 : ENV SA_PASSWORD=$SA_PASSWORD\n",
+      " ---> Using cache\n",
+      " ---> 94ec12721485\n",
+      "Step 15/15 : CMD /opt/mssql/bin/sqlservr &     cd Mlos.Python; python3.7 start_mlos_optimization_runtime.py launch --database-connection-string-file ./Secrets/local_docker_connection_string.json\n",
+      " ---> Using cache\n",
+      " ---> 47630835a8d0\n",
+      "Successfully built 47630835a8d0\n",
+      "Successfully tagged mssql-server-linux-with-mlos-python:latest\n",
+      "SECURITY WARNING: You are building a Docker image from Windows against a non-Windows Docker host. All files and directories added to build context will have '-rwxr-xr-x' permissions. It is recommended to double check and reset permissions for sensitive files and directories.\n"
+     ]
     }
    ],
    "source": [
@@ -174,9 +225,12 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "docker run --detach -p1433:1433 --name MlosOptimizerService mssql-server-linux-with-mlos-python\nbb2ea175d37a4428e885e17bae73e90c784514b779aad27fc0a4b850ea1a3f47\n"
+     "output_type": "stream",
+     "text": [
+      "docker run --detach -p1433:1433 --name MlosOptimizerService mssql-server-linux-with-mlos-python\n",
+      "bb2ea175d37a4428e885e17bae73e90c784514b779aad27fc0a4b850ea1a3f47\n"
+     ]
     }
    ],
    "source": [
@@ -200,9 +254,11 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "c:\\Users\\bpkroth\\src\\MLOS\\MLOS.msdata.2\\out\\dotnet\\source\\Mlos.Agent.Server\\obj\\AnyCPU\\Mlos.Agent.Server.exe \"c:\\Users\\bpkroth\\src\\MLOS\\MLOS.msdata.2\\source\\Mlos.Python\\Secrets\\local_docker_connection_string.json\"\n"
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\bpkroth\\src\\MLOS\\MLOS.msdata.2\\out\\dotnet\\source\\Mlos.Agent.Server\\obj\\AnyCPU\\Mlos.Agent.Server.exe \"c:\\Users\\bpkroth\\src\\MLOS\\MLOS.msdata.2\\source\\Mlos.Python\\Secrets\\local_docker_connection_string.json\"\n"
+     ]
     }
    ],
    "source": [
@@ -226,9 +282,12 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "c:\\Users\\bpkroth\\src\\MLOS\\MLOS.msdata.2\\out\\dotnet\\source\\Examples\\SmartCache\\obj\\x64\\SmartCache.exe\nSmartCache.exe exited.\n"
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\bpkroth\\src\\MLOS\\MLOS.msdata.2\\out\\dotnet\\source\\Examples\\SmartCache\\obj\\x64\\SmartCache.exe\n",
+      "SmartCache.exe exited.\n"
+     ]
     }
    ],
    "source": [
@@ -257,9 +316,14 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "docker stop MlosOptimizerService\nMlosOptimizerService\ndocker container rm MlosOptimizerService\nMlosOptimizerService\n"
+     "output_type": "stream",
+     "text": [
+      "docker stop MlosOptimizerService\n",
+      "MlosOptimizerService\n",
+      "docker container rm MlosOptimizerService\n",
+      "MlosOptimizerService\n"
+     ]
     }
    ],
    "source": [
@@ -284,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
